--- a/app/src/main/res/layout/valores_usuario.xml
+++ b/app/src/main/res/layout/valores_usuario.xml
@@ -11,7 +11,7 @@
         android:layout_height="55dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="28dp"
         android:gravity="center"
         android:text="R"
@@ -19,7 +19,7 @@
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="27dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="35dp" />
+        android:layout_marginLeft="17dp" />
 
     <TextView
         android:id="@+id/textView42"
@@ -27,10 +27,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/valorInicial"
-        android:layout_marginStart="105dp"
+        android:layout_marginStart="69dp"
         android:text="Nome: "
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="105dp" />
+        android:layout_marginLeft="69dp"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/textView43"
@@ -45,12 +45,12 @@
         android:id="@+id/valorNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/valorInicial"
-        android:layout_marginEnd="124dp"
+        android:layout_marginStart="142dp"
         android:text="TextView"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="124dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="142dp" />
 
     <TextView
         android:id="@+id/valorNumero"
@@ -70,4 +70,5 @@
         android:layout_marginTop="108dp"
         android:layout_alignLeft="@+id/valorInicial"
         android:layout_marginLeft="-35dp" />
+
 </RelativeLayout>
