--- a/app/src/main/res/layout/valores_usuario.xml
+++ b/app/src/main/res/layout/valores_usuario.xml
@@ -1,74 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="7dp"
+    card_view:cardElevation="7dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/valorInicial"
-        android:layout_width="36dp"
-        android:layout_height="55dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="28dp"
-        android:gravity="center"
-        android:text="R"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="27dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="17dp" />
-
-    <TextView
-        android:id="@+id/textView42"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/valorInicial"
-        android:layout_marginStart="69dp"
-        android:text="Nome: "
-        android:layout_marginLeft="69dp"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
-        android:id="@+id/textView43"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/valorInicial"
-        android:layout_alignStart="@+id/textView42"
-        android:text="Telefone"
-        android:layout_alignLeft="@+id/textView42" />
-
-    <TextView
-        android:id="@+id/valorNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/valorInicial"
-        android:layout_marginStart="142dp"
-        android:text="TextView"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="142dp" />
-
-    <TextView
-        android:id="@+id/valorNumero"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/valorInicial"
-        android:layout_alignStart="@+id/valorNome"
-        android:text="TextView"
-        android:layout_alignLeft="@+id/valorNome" />
-
-    <Space
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="13dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/valorInicial"
-        android:layout_marginStart="-35dp"
-        android:layout_marginTop="108dp"
-        android:layout_alignLeft="@+id/valorInicial"
-        android:layout_marginLeft="-35dp" />
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/valorInicial"
+            android:layout_width="36dp"
+            android:layout_height="55dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="17dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="28dp"
+            android:gravity="center"
+            android:text="R"
+            android:textSize="30sp"
+            tools:layout_editor_absoluteX="26dp"
+            tools:layout_editor_absoluteY="27dp" />
+
+        <TextView
+            android:id="@+id/textView42"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/valorInicial"
+            android:layout_marginLeft="69dp"
+            android:layout_marginStart="69dp"
+            android:text="Nome: " />
+
+        <TextView
+            android:id="@+id/textView43"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/valorInicial"
+            android:layout_alignLeft="@+id/textView42"
+            android:layout_alignStart="@+id/textView42"
+            android:text="Telefone" />
+
+        <TextView
+            android:id="@+id/valorNome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/valorInicial"
+            android:layout_marginLeft="142dp"
+            android:layout_marginStart="142dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/valorNumero"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/valorInicial"
+            android:layout_alignLeft="@+id/valorNome"
+            android:layout_alignStart="@+id/valorNome"
+            android:text="TextView" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="13dp"
+            android:layout_alignLeft="@+id/valorInicial"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/valorInicial"
+            android:layout_marginLeft="-35dp"
+            android:layout_marginStart="-35dp"
+            android:layout_marginTop="108dp" />
+
+    </RelativeLayout>
+
+
+
+</android.support.v7.widget.CardView>
