Adicionado DatePicker e validação no campo de data do cadastro de atividade

--- a/app/src/main/res/layout/activity_cadastro_atividade.xml
+++ b/app/src/main/res/layout/activity_cadastro_atividade.xml
@@ -86,7 +86,7 @@
         android:layout_marginBottom="89dp"
         android:ems="10"
         android:gravity="center"
-        android:inputType="date"
+        android:inputType="number"
         android:textAlignment="center" />
 
     <Button
