Adicionado SharedPref paras configurações e sincronização de dados de usuario feita

--- a/app/src/main/res/menu/configuracoes.xml
+++ b/app/src/main/res/menu/configuracoes.xml
@@ -6,6 +6,12 @@
     <item
         android:id="@+id/config"
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Novo Contato"
+        android:title="Configuração"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/sinc"
+        android:icon="@android:drawable/ic_menu_rotate"
+        android:title="Sincronizar"
         app:showAsAction="always" />
 </menu>
