--- a/app/src/main/res/menu/opcoes.xml
+++ b/app/src/main/res/menu/opcoes.xml
@@ -4,12 +4,14 @@
 
     <item
         android:id="@+id/dados"
+        android:icon="@android:drawable/stat_sys_upload"
         android:title="Meus Dados"
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/buscaServidor"
-        android:title="Requisitar Servidor"
-        app:showAsAction="collapseActionView" />
+        android:icon="@android:drawable/stat_sys_download_done"
+        android:title="Sincronizar"
+        app:showAsAction="always" />
 
 </menu>
